--- a/css/index.css
+++ b/css/index.css
@@ -261,6 +261,9 @@ header label:hover {
     width: 15.625em;
     height: 15.625em;
     border-radius: 50%;
+    border-width: 7px;
+    border-color: #dab88bd9;
+    border-style: double;
 }
 
 .info img:hover {
@@ -526,6 +529,9 @@ header label:hover {
     width: 15.625em;
     height: 15.625em;
     border-radius: 50%;
+    border-width: 7px;
+    border-color: #dab88bd9;
+    border-style: double;
 }
 
 .especializacion img:hover {
@@ -558,6 +564,10 @@ header label:hover {
 
 .hacemos img {
     width: 28.125em;
+    border-radius: 2em;
+    border-width: 0.7em;
+    border-color: #dab88be3;
+    border-style: groove;
 }
 
 .texto-hacemos {
@@ -639,8 +649,9 @@ header label:hover {
 }
 
 .foto-proyectos img:hover {
-    transition: all 0.8s ease-in-out;
-    transform: scale(1.1);
+    transition: all 0.9s ease-in-out;
+    transform: scale(1.3);
+    filter: grayscale(80%);
 }
 
 
@@ -659,7 +670,7 @@ header label:hover {
 }
 
 .contenedor-noticias {
-    width: 100%;
+    width: 90%;
     margin: 0 auto;
     margin-top: 2.5em;
     display: flex;
@@ -679,8 +690,14 @@ header label:hover {
 
 .img-noticia {
     width: 100%;
+    border-radius: 2em;
+    border-color: black;
+    border-style: solid;
+    border-width: 0.2em;
 }
-
+.img-noticia:hover{
+    filter: opacity(.5);
+}
 .texto-blog {
     font-family: 'Roboto', sans-serif;
     text-align: left;
@@ -725,7 +742,7 @@ header label:hover {
 
 
 .formulario {
-    width: 100%;
+    width: 70%;
     margin: 0 auto;
     text-align: left;
 }
