--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ font-family: 'Roboto', sans-serif;*/
 /*propiedades de la pagina*/
 
 html {
-    box-sizing: border-box;
+    box-sizing: border-box; /*El valor box-sizing border-box hace que el padding y el border pasen a formar parte del cálculo del ancho de la caja y no lo suman posteriormente.*/
 }
 
 * {
@@ -14,7 +14,7 @@ html {
     box-sizing: inherit;
 }
 
-.fondo {
+.fondo { /*esta clase la utilice para poner una imagen de fondo que ocupara todo el header*/
     width: 100%;
     height: 62.5em;
     position: relative;
@@ -29,13 +29,12 @@ header {
     width: 100%;
     /*ancho del header*/
     height: 0;
-    /*4.375em*/
     /*alto del header*/
     margin-bottom: 4em;
 }
 
 .header-contenedor {
-    position: fixed;
+    position: fixed; /*le di position fixed para que cuando hago scroll hacia abajo el icono del menu nav baje junto al scroll*/
     top: 0;
     padding: 3.125em;
     width: 100%;
